# heretic-to-onnx

./: .dockerignore  .gitignore  README.md  pyproject.toml
browser-chat/: app.js  index.html  runtime-client.js  runtime-errors.mjs  runtime-worker.js  scorecard-runner.html  scorecard-runner.js  smoke-runner.html  smoke-runner.js  styles.css
browser-models/: alkahest-08b-heretic-onnx-opt-q4  alkahest-08b-heretic-q8-onnx  alkahest-2b
colab/: heretic_to_onnx_full_pipeline.ipynb
configs/: heretic-to-onnx.gemma4-e2b-heretic-ara-text.yaml  heretic-to-onnx.gemma4-e2b-heretic-ara-v2.yaml  heretic-to-onnx.gemma4-e2b-heretic-ara.yaml  heretic-to-onnx.gemma4-e2b-rp-text.yaml  heretic-to-onnx.gemma4-e4b-heretic-v2.yaml  heretic-to-onnx.gemma4-e4b-heretic.yaml  heretic-to-onnx.local-smoke.yaml  heretic-to-onnx.qwen3-5-0.8b-heretic-q4-webgpu.yaml  heretic-to-onnx.qwen3-5-0.8b-heretic-v2.yaml  heretic-to-onnx.qwen3-5-0.8b-heretic.yaml  heretic-to-onnx.qwen3-5-2b-heretic-v2.yaml  heretic-to-onnx.qwen3-5-2b-heretic.yaml  heretic-to-onnx.qwen3-5-4b-heretic-v2.yaml  heretic-to-onnx.qwen3-5-4b-heretic.yaml
docker/: Dockerfile.phala  phala-compose.debug.yml  phala-compose.yml  phala-entrypoint.sh  phala.env.example  requirements-phala.txt
docs/: H200-LAUNCH-SEQUENCE.md  PRELAUNCH.md  alkahest-08b-browser-smoke.md  alkahest-closeout-2026-05-04.md  alkahest-definitive-model-list.md  alkahest-hf-cleanup-plan.md  alkahest-model-branding.md  alkahest-qwen-browser-export-postmortem.md  alkahest-qwen-browser-smoke-2026-04-30.md  browser-compatibility.md  browser-free-chat.md  (+19 more)
(+181 files in other folders)
